--- a/styles.css
+++ b/styles.css
@@ -77,6 +77,7 @@ header{
     border: 5px solid var(--bg-color);
     justify-content: space-between;
     z-index: 4;
+    top: 0;
     transition: background-color 0.5s ease-in-out, color 0.5s ease-in-out, border 0.5s ease-in-out;
 }
 
@@ -504,3 +505,37 @@ header nav ul li:last-of-type a{
   ::-webkit-scrollbar-thumb:hover {
     background: var(--bg-color2); /* Set the color of the scrollbar handle when hovered */
   }
+
+.code-container{
+    /* top:200px; */
+    width:100%;
+    height: 30%;
+    display: flex;
+    align-items: left;
+    justify-content: center;
+    position:relative;
+    align-content: center;
+    /* min-height: 60%; */
+}
+
+#code1{
+    width:80%;
+    height:80%;
+    background-color: #141414;
+}
+
+.intro{
+    /* position: relative; */
+    margin-top: 100px;
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    align-content: center;
+    flex-wrap: wrap;
+}
+
+.intro p{
+    width:70%;
+    font-size:18px;
+    font-weight:500;
+}
