--- a/prism.css
+++ b/prism.css
@@ -276,11 +276,12 @@ div.code-toolbar {
 
 div.code-toolbar>.toolbar {
     position: absolute;
-    z-index: 10;
-    top: .3em;
-    right: .2em;
+    z-index: 2;
+    top: .8em;
+    right: .5em;
     transition: opacity .3s ease-in-out;
-    opacity: 0
+    opacity: 0;
+    /* height: 5em; */
 }
 
 div.code-toolbar:hover>.toolbar {
