--- a/styles.css
+++ b/styles.css
@@ -330,7 +330,7 @@ header nav ul li:last-of-type a{
 }
 
 .about-me h1{
-    margin-top: 100px;
+    margin-top: 180px;
     font-size: 36px;
     font-weight: 800;
 }
@@ -567,7 +567,7 @@ header nav ul li:last-of-type a{
 }
 
 .hero img {
-    height: min(94vh,55vw);
+    height: min(90vh,55vw);
     padding-left: 30vw;
     z-index: 0;
     float: right;
@@ -588,7 +588,7 @@ header nav ul li:last-of-type a{
 
 .reveal1.active{
     opacity:1;
-    transform: translateY(50px);
+    transform: translateY(10px);
 }
 
 #home{
@@ -597,4 +597,13 @@ header nav ul li:last-of-type a{
     margin-top: 15px;
     align-self: center;
     /* padding-top: 10px; */
+}
+
+#laptop1{
+    position:absolute;
+    align-self:center;
+    /* justify-content: end; */
+    height:95%;
+    width:70%;
+    /* bottom:0; */
 }
