--- a/animations.css
+++ b/animations.css
@@ -4,7 +4,7 @@
   height: 78px;
   border-radius: 50%;
   background: #fff;
-  border: 8px solid #131a1d;
+  border: 8px solid #000;
   overflow: hidden;
   box-sizing: border-box;
 }
@@ -18,7 +18,7 @@
   height: 100%;
   background: #F9FFB5;
   z-index: 5;
-  border-bottom: 8px solid #131a1d;
+  border-bottom: 8px solid #000;
   box-sizing: border-box;
   animation: eyeShade 3s infinite;
 }
@@ -31,9 +31,52 @@
   width: 32px;
   z-index: 2;
   height: 32px;
-  background: #111;
+  background: #000;
   border-radius: 50%;
   animation: eyeMove 3s infinite;
+}
+
+
+.loader1 {
+    position:relative;
+    margin-top: 10px;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background: #fff;
+    border: 6px solid #000;
+    overflow: hidden;
+    box-sizing: border-box;
+    display:inline-block;
+    align-self: center;
+    /* margin-right:10px; */
+}
+
+.loader1::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: -50%;
+  width: 100%;
+  height: 100%;
+  background: #F9FFB5;
+  z-index: 5;
+  border-bottom: 6px solid #000;
+  box-sizing: border-box;
+  animation: eyeShade1 15s infinite;
+}
+
+.loader1::before {
+  content: '';
+  position: absolute;
+  left: 10px;
+  bottom: 7px;
+  width: 16px;
+  z-index: 2;
+  height: 16px;
+  background: #000;
+  border-radius: 50%;
+  animation: eyeMove1 15s infinite;
 }
 
 @keyframes eyeShade {
@@ -58,7 +101,7 @@
   }
 
   100% {
-    transform: translateY(10px)
+    transform: translateY(0px)
   }
 }
 
@@ -84,6 +127,59 @@
   }
 
   100% {
-    transform: translate(0 , 10px)
+    transform: translate(0 , 0px)
+  }
+}
+
+  
+@keyframes eyeShade1 {
+  0% {
+    transform: translateY(0)
+  }
+
+  20% {
+    transform: translateY(2.5px)
+  }
+
+  40% , 50% {
+    transform: translateY(-2.5px)
+  }
+
+  60% {
+    transform: translateY( -4px)
+  }
+
+  75% {
+    transform: translateY( 2.5px)
+  }
+
+  100% {
+    transform: translateY(0px)
+  }
+}
+
+@keyframes eyeMove1 {
+  0% {
+    transform: translate(0 , 0)
+  }
+
+  20% {
+    transform: translate(0px , 2.5px)
+  }
+
+  40% , 50% {
+    transform: translate(0px , -2.5px)
+  }
+
+  60% {
+    transform: translate(-5px , -2.5px)
+  }
+
+  75% {
+    transform: translate(-10px , 2.5px)
+  }
+
+  100% {
+    transform: translate(0 , 0px)
   }
 }
