--- a/styles.css
+++ b/styles.css
@@ -533,6 +533,24 @@ header nav ul li:last-of-type a{
    transform: translateX(calc(var(--switch_width) - var(--switch_height))) translateY(-0.3em);
    box-shadow: 0 0.3em 0 var(--outline_color);
   }
+  
+  @media (max-width:500px){
+    .switch{
+        --switch_width: 55px;
+        width:55px;
+    }
+    input:checked + .slider:before {
+        transform: translateX(20px) translateY(-0.2em);
+    }
+    input:hover:checked + .slider:before {
+        transform: translateX(26px) translateY(-0.3em);
+        box-shadow: 0 0.3em 0 var(--outline_color);
+    }
+    .slider{
+        width: 55px;
+    }
+
+  }
 
   ::-webkit-scrollbar {
     width: 10px; /* Set the width of the scrollbar */
