--- a/styles.css
+++ b/styles.css
@@ -140,7 +140,7 @@ header nav ul li:last-of-type a{
     flex-direction: column;
     padding-left: max(60px,8vw);
     padding-bottom: 150px;
-    /* position: absolute; */
+    position: absolute;
     pointer-events: all;
     z-index: 3;
 }
