--- a/styles.css
+++ b/styles.css
@@ -342,6 +342,7 @@ header nav ul li:last-of-type a{
     align-content: center;
     flex-wrap: wrap;
     justify-content: center;
+    margin-bottom: 201px;
     align-items: center;
 }
 
@@ -354,7 +355,7 @@ header nav ul li:last-of-type a{
 }
 
 .about-me h1{
-    margin-top: 180px;
+    margin-top: 50px;
     font-size: 36px;
     font-weight: 800;
 }
@@ -677,7 +678,9 @@ header nav ul li:last-of-type a{
 
 #hero-mobile{
     display: none;
-    width:100%;
+    /* width:100%; */
+    height: 50%;
+    max-width: 100%;
     margin-top: 80px;
     position: relative;
     scale: 1.1;
@@ -705,6 +708,7 @@ header nav ul li:last-of-type a{
         display:flex;
         align-content: center;
         flex-direction: column;
+        align-items: center;
     }
     .hero-text{
         position: relative;
